--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,78 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.gbif.occurrence</groupId>
-  <artifactId>occurrence-hadoop-minicluster</artifactId>
+  <artifactId>hadoop-minicluster</artifactId>
   <name>Occurrence :: Hadoop minicluster</name>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+
+  <scm>
+    <connection>scm:git:git@github.com:gbif/hadoop-minicluster.git</connection>
+    <url>https://github.com/gbif/hadoop-minicluster</url>
+    <developerConnection>scm:git:git@github.com:gbif/hadoop-minicluster.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
+
+  <distributionManagement>
+    <site>
+      <id>gh-pages</id>
+      <url>http://gbif.github.io/hadoop-minicluster/</url>
+    </site>
+    <repository>
+      <id>gbif-release</id>
+      <url>https://repository.gbif.org/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>gbif-deploy</id>
+      <url>https://repository.gbif.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+
+  <repositories>
+    <repository>
+      <id>gbif-all</id>
+      <url>https://repository.gbif.org/content/groups/gbif</url>
+    </repository>
+    <repository>
+      <id>gbif-central</id>
+      <url>https://repository.gbif.org/repository/central/</url>
+    </repository>
+    <repository>
+      <id>gbif-release</id>
+      <url>https://repository.gbif.org/repository/releases/</url>
+    </repository>
+    <repository>
+      <id>gbif-snapshot</id>
+      <url>https://repository.gbif.org/repository/snapshots/</url>
+    </repository>
+    <repository>
+      <id>gbif-thirdparty</id>
+      <url>https://repository.gbif.org/repository/thirdparty/</url>
+    </repository>
+    <repository>
+      <id>gbif-thirdparty-snapshot</id>
+      <url>https://repository.gbif.org/repository/thirdparty-snapshot/</url>
+    </repository>
+    <repository>
+      <id>typesafe</id>
+      <name>Typesafe Repository</name>
+      <url>https://repo.typesafe.com/typesafe/maven-releases/</url>
+    </repository>
+    <repository>
+      <id>osgeo</id>
+      <name>Open Source Geospatial Foundation Repository</name>
+      <url>https://repo.osgeo.org/repository/release/</url>
+    </repository>
+    <repository>
+      <id>ALA</id>
+      <url>https://nexus.ala.org.au/content/repositories/releases</url>
+    </repository>
+    <repository>
+      <id>ALA-snapshots</id>
+      <url>https://nexus.ala.org.au/content/repositories/snapshots</url>
+    </repository>
+  </repositories>
+
   <properties>
     <hadoop.version>3.3.5</hadoop.version>
     <hbase.version>2.6.0-hadoop3</hbase.version>
